--- a/default.html
+++ b/default.html
@@ -1,1 +1,1 @@
-<h1><center>Nasza pierwsza aplikacja - WERSJA PRODUKCYJNA</center></h1>
+<h1><center>Nasza pierwsza aplikacja - WERSJA PRODUKCYJNA po zmianie</center></h1>
